<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/OilChoiceLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linear_gasoil_station_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gasoil_station"
                android:textSize="@dimen/fit_font_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_dieseloil_station_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dieseloil_station"
                android:textSize="@dimen/fit_font_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_favorite_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/favorite"
                android:textSize="@dimen/fit_font_title" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/division_line_color" />

    <ListView
        android:id="@+id/main_gas_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/dashed_line"
        android:dividerHeight="1dip"
        android:fadeScrollbars="false"
        android:fastScrollEnabled="false" />

</LinearLayout>